--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 </head>
 <body>
 
+    <header></header>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/">accueil</a>
+        </li>
+        <li>
+          <a href="https://latoile.em-lyon.com/" target="_blank">formation</a>
+        </li>
+        <li>
+          <a href="https://em-lyon.com/" target="_blank">em lyon</a>
+        </li>
+      </ul>
+    </nav>
+
     <section>
         <div  id="cover"><a target="_blank" href="https://youtu.be/g2N0TkfrQhY?si=CAtn72kiFpwnaLFn"><img src="https://t2.genius.com/unsafe/600x600/https%3A%2F%2Fimages.genius.com%2F38040974c7353f17b86e63b995e83bac.1000x1000x1.png" alt="album Innuendo Queen"></a></div>
     
@@ -59,6 +74,9 @@
             </li>
         </ul>
     </div>
+    <footer>
+        <p>© CodeMakers 2024</p>
+      </footer>  
 </body>
 </html>
 
